--- a/Agda.cabal
+++ b/Agda.cabal
@@ -245,6 +245,7 @@ library
                 , peano >= 0.1.0.1 && < 0.2
                 , pretty >= 1.1.3.3 && < 1.2
                 , process >= 1.4.2.0 && < 1.7
+                , pqueue >= 1.4.1.2 && < 1.5
                 , regex-tdfa >= 1.3.1.0 && < 1.4
                 , split >= 0.2.0.0 && < 0.2.4
                 , stm >= 2.4.4 && < 2.6
@@ -363,6 +364,8 @@ library
                     Agda.Interaction.Options.Lenses
                     Agda.Interaction.Options.Warnings
                     Agda.Main
+                    Agda.Mimer.Mimer
+                    Agda.Mimer.Options
                     Agda.Syntax.Abstract.Name
                     Agda.Syntax.Abstract.Pattern
                     Agda.Syntax.Abstract.PatternSynonyms
